Fix bug with missing spaces before links.

--- a/var/src/template/report/codedoc.styl
+++ b/var/src/template/report/codedoc.styl
@@ -390,6 +390,9 @@ ul.table-of-contents
     color: black
   li.sidebar
     display: list-item
+  .toplink
+    float: right
+    color: black
 @media (min-width: 768px)
   ul.table-of-contents
     li.sidebar
@@ -402,6 +405,7 @@ ul.table-of-contents
 */
 .tabs
   padding: 0
+  margin-bottom: 10px
   /* to move all other contents below */
   &:after
     content: ''
